--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
+    "prisma": "^4.1.1",
     "typescript": "^4.7.4"
   }
 }
