--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@prisma/client": "^4.1.1",
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
